[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["davidade300 <iaderinho@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
